--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
