--- a/backend/package.json
+++ b/backend/package.json
@@ -24,5 +24,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Amsalegebrehana/MT-sample-Website.git"
   }
 }
